// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "ojywl7GMKZU*opR%8",
  "context": Object {
    "groupId": "ojywl7GMKZU*opR%8",
  },
  "messageId": "cbbe4df4-3d89-42e1-9115-d1d0c669c32c",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "ojywl7GMKZU*opR%8",
  },
  "userId": "ojywl7GMKZU*opR%8",
}
`;

exports[`Testing snapshot for Ripe's identify destination action: required fields 1`] = `
Object {
  "anonymousId": "ojywl7GMKZU*opR%8",
  "context": Object {},
  "messageId": "1401589f-646b-4bfc-9397-0ed392d5c52f",
  "timestamp": "2023-01-03T13:46:12.001Z",
  "traits": Object {
    "testType": "ojywl7GMKZU*opR%8",
  },
}
`;
